<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="20dp"
        android:background="@drawable/round_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_address"
        app:layout_constraintTop_toBottomOf="@+id/tv_address" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/원"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_price"
        app:layout_constraintStart_toEndOf="@+id/tv_price"
        app:layout_constraintTop_toTopOf="@+id/tv_price" />


    <ImageView
        android:id="@+id/iv_chat"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="3dp"
        android:src="@drawable/bubble_chat"
        app:layout_constraintBottom_toBottomOf="@+id/tv_chat"
        app:layout_constraintEnd_toStartOf="@+id/tv_chat"
        app:layout_constraintTop_toTopOf="@+id/tv_chat" />

    <TextView
        android:id="@+id/tv_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/chat"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_like"
        app:layout_constraintEnd_toStartOf="@+id/iv_like" />


    <ImageView
        android:id="@+id/iv_like"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="3dp"
        android:src="@drawable/heart"
        app:layout_constraintBottom_toBottomOf="@+id/tv_like"
        app:layout_constraintEnd_toStartOf="@+id/tv_like"
        app:layout_constraintTop_toTopOf="@+id/tv_like" />

    <TextView
        android:id="@+id/tv_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/like"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_centerInParent="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>